* pheno:   reworked a second time the way how ready state was sent to the
           client. This will fix the broken scoreboard on more than 30 players.
* pheno:   Lua API: added et.G_LoseSkillPoints( ent, skill, points )
           library call
* pheno:   added shoutcaster sclogin, sclogout, shoutcastlogin and
           shoutcastlogout commands (NOTE: shoutcaster status is only available
           with installed etpub client > 20090112)
* pheno:   Lua API: added et.G_ClientSound( clientnum, soundindex )
           library call
* pheno:   fixed [command] element command line length
* pheno:   fixed landmine snapshot callback for shoutcasters in follow mode
* pheno:   added shoutcaster console commands
* pheno:   added [i] shortcut for shrubbot [command] elements only
* pheno:   added shoutcaster referee commands
* pheno:   added cointoss callvote command
* pheno:   added friendly hitsounds for disguised coverts
* pheno:   fixed class change with scoped weapon bug (prevents scoped sten)
* pheno:   added headshot mode (g_headshot [0|1])
* pheno:   added instagib damage (bitflag 2) to headshot mode. g_headshot is
           now a bitflag cvar.
* pheno:   added g_goombaFlags flag 32 - falling corpses won't cause damage
* pheno:   added g_shrubbotOptions bitflag cvar (see docs)
* pheno:   added death anim and medic call to playdead command
* pheno:   fixed server crash when calling shrubbot command with [i] shortcut
           at server console
* pheno:   added g_slashKill flag 8 - disable /kill when player is frozen
* pheno:   a frozen player cannot switch teams for now
* pheno:   Lua API: fixed a bug where gclient entity fields are not available
           on et_ClientConnect() callback
* pheno:   fixed broken FF voting
* pheno:   Lua API: load API from external library
* pheno:   fixed !rename if player has reached max name changes
* pheno:   added support for ETPro's delete mapscript command
* pheno:   fixed delete mascript command causes server crashes