@@ -73,7 +73,7 @@ dt {
 <td><a href="#g_goombaFlags">g_goombaFlags</a></td>
 <td><a href="#g_shrubbotOptions">g_shrubbotOptions</a></td>
 <td><a href="#g_slashKill">g_slashKill</a></td>
-<td>&nbsp;</td>
+<td><a href="#g_ettvFlags">g_ettvFlags</a></td>
 </tr>
 </table>
 
@@ -3314,6 +3314,18 @@ still be revived after being shot.).</p>
 	<dd>Shrubbot flag '0' admins will be moved to spectators due to team inactivity
 </dl>
 <p>Default is 0</p>
+
+<a name="g_ettvFlags"></a>
+<dt>g_ettvFlags [integer]
+<dd>
+<p>This is a bitflag cvar that supports the following values</p>
+<dl>
+	<dt>1
+	<dd>Prevent ettv slaves from being callvote kicked
+	<dt>2
+	<dd>Grant shoutcaster status to ettv slaves
+</dl>
+<p>Default is 3</p>
 
 <hr>
 <a name="mapvoting"></a>
